# uv-python-context-network

./: .context-network.md  .gitignore  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-tests.yml
context-network/: discovery.md
context-network/archive/: README.md
context-network/connections/: dependencies.md  interfaces.md
context-network/decisions/: decision_index.md  decision_template.md  uv_exclusive_approach.md
context-network/elements/: README.md
context-network/elements/uv-python/: commands.md  constraints.md  devcontainer.md  overview.md  structure.md  workflow.md
context-network/foundation/: principles.md  project_definition.md  structure.md
context-network/meta/: maintenance.md  node_template.md  updates.md
context-network/planning/: milestones.md  roadmap.md
context-network/processes/: creation.md  delivery.md  document_integration.md  validation.md
inbox/: comprehensive-context-network-guide.md  custom-instructions-prompt.md
src/package_name/: __init__.py  example.py
tests/: test_example.py
