[project]
name = "uv-python-template"
version = "0.1.0"
description = "A template for Python projects using UV package manager"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.uv]
python = "3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
